[package]
name = "assignment_7_q3_lib"
version = "0.1.0"
authors = ["Administrator"]
edition = "2018"
repository = "https://github.com/mazharjameel786/divide.git"
homepage = "https://github.com/mazharjameel786/divide.git"
license = "MIT/Apache-2.0"
readme = "README.md"
description = "First Welcome Library "
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
